# allsvenskan-predictor

./: .gitignore  README.md  main.py  pyproject.toml
conf/: logging.yml
conf/base/: parameters.yml
data/07_model_output/: predictions.json
docs/: coming_predictions.json  predictions.json  seasonal_predictions.json
notebooks/: 01_data_exploration.ipynb  cup_adding.ipynb
src/allsvenskan_predictor/: __init__.py  settings.py
src/allsvenskan_predictor/pipelines/modeling/: nodes.py  pipeline.py
src/allsvenskan_predictor/stan/: poisson_model  poisson_model.stan
