[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "allsvenskan-predictor"
version = "0.1.0"
description = "Bayesian football prediction engine for Swedish leagues"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kedro~=1.2.0",
    "ipython>=8.10",
    "jupyterlab>=4.5.5",
    "notebook",
    "ipykernel>=7.2.0",
    "arviz>=0.23.4",
    "cmdstanpy>=1.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "polars>=1.38.1",
]

[project.optional-dependencies]
dev = [
    "pytest~=7.2",
    "pytest-cov>=3,<7",
    "pytest-mock>=1.7.1,<2.0",
    "ruff~=0.12.0",
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.kedro]
package_name = "allsvenskan_predictor"
project_name = "Allsvenskan Predictor"
kedro_init_version = "1.2.0"
example_pipeline = "False"
source_dir = "src"

[tool.ruff]
line-length = 88
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = ["F", "W", "E", "I", "UP", "PL", "T201"]
ignore = ["E501"]
[tool.kedro_telemetry]
project_id = "0fce44a076d04ec5bc64fee12db6d19f"
